finish testimonial section

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -13,6 +13,8 @@ a
     text-decoration: none
     padding: 10px 15px
     border-radius: 5px
+h2
+    font-weight: 500
 .hbar
     display: flex
     justify-content: space-between
@@ -81,7 +83,17 @@ a
         &:first-of-type
             position: absolute
             transform: translateX(-20%)
-
     div
         &:last-of-type
-            max-width: 400px
+            max-width: 300px
+        h2
+            font-size: 3em
+            color: $color4
+        p
+            line-height: 2em
+            color: $color2
+            font-weight: 200
+            &:last-of-type
+                line-height: 1em
+        span
+            color: $color4
