--- a/styles/main.sass
+++ b/styles/main.sass
@@ -11,7 +11,7 @@ body
     font-family: sans-serif
     margin: 0
     padding: 0
-    transition: .5s ease-out
+    transition: .5s
 
 span
     font-weight: bolder
@@ -51,6 +51,7 @@ h2
 
         &:first-of-type
             max-width: 500px
+            transform: translateX(70%)
             h1
 
                 font-size: 3.5em
@@ -74,6 +75,7 @@ h2
             width: 15%
             display: flex
             justify-content: center
+            transform: translateX(-80%)
             p
                 font-variant: all-small-caps
                 color: $color2
@@ -84,7 +86,7 @@ h2
 
     & > img
         position: absolute
-        left: 40%
+        left: 45%
         z-index: -10
 .testimonial
     background-color: $color1
